2008-05-19  Badlop  <badlop@process-one.net>

	* src/configure.ac: R12 support: remove compilation
	warning (EJAB-630)
	* src/configure: Likewise
	* doc/guide.tex: Likewise

	* doc/guide.tex: Describe how to disable registration
	limitation (EJAB-614)

2008-05-16  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_c2s.erl: Added C2S blacklist support (EJAB-625).
	* src/mod_ip_blacklist.erl: Likewise.
	* src/jlib.erl: Added IP format tuple to string function.
	* src/ejabberd_socket.erl: Properly handled c2s start failure (happen
	for blacklisted IP).

2008-05-16  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_receiver.erl: Don't activate a socket untill its
	receiver process is controlling it (Thanks to Aleksey)

	* src/ejabberd_s2s_out.erl: Change FSMTIMEOUT to 30s

2008-05-12  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Return Forbidden error message
	when user sends private message in a room that disallows
	it (EJAB-595)

	* src/web/ejabberd_http.erl (parse_auth): Allow password that
	include colon character (EJAB-622)

2008-04-30  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_caps.erl: XEP-0115 patch (EJAB-618)

2008-04-29  Badlop  <badlop@process-one.net>

	* src/ejabberd_s2s_out.erl: Improve confusing log message in s2s
	connection: wait_for_validation connect timeout (EJAB-617)

	* src/ejabberd.cfg.example: Small improvements in explanations

	* doc/guide.tex: Document MUC room options (EJAB-619)

2008-04-28  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Document the option max_s2s_connections

2008-04-27  Alexey Shchepin  <alexey@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Fixed room shaper processing

2008-04-26  Badlop  <badlop@process-one.net>

	* src/mod_shared_roster.erl: Fix for new registered accounts not
	being immediately shown in an 'all' special shared roster
	group (thanks to Alexey Shchepin) (EJAB-71)
	* src/mod_register.erl: New vhost event user_registered
