@@ -121,7 +121,7 @@ the processing discipline for #1 IQ queries (see section~\ref{modiqdiscoption}).
 {\rule{\larg}{1mm}}
 \vspace{2mm} \\
 \begin{center}
-    {\large  \bf May 2, 2008}
+    {\large  \bf \today}
 \end{center}
 \vspace{5.5cm}
 }
