@@ -1,2 +1,2 @@
 % ejabberd version (automatically generated).
-\newcommand{\version}{2.0.0}
+\newcommand{\version}{2.0.x}
